<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title">最近记录:</string>
    <string name="app_name">iTracks</string>
    <string name="app_title">iTracks -Track My Location.</string>
    
    <string name="menu_main">主界面</string>
    <string name="menu_new">新建跟踪</string>
    <string name="menu_con">继续跟踪</string>
    <string name="menu_del">删除</string>
    
    <string name="menu_setting">个人设置</string>
    <string name="menu_helps">帮助信息</string>
    <string name="menu_back">返回</string>
    <string name="menu_exit">退出</string>
    
    <!--新建跟踪界面-->
    <string name="new_tips">输入跟踪的名字和一段描述</string>
    <string name="new_name">跟踪名:</string>
    <string name="new_desc">跟踪描述:</string>
    <string name="new_submit">确定</string>
    <string name="new_name_null">跟踪名不能为空.</string>
    <string name="new_fail">新建跟踪失败.</string>
    
        
    <!--个人设置界面-->
    <string name="setting_tips">选择你的个人设置</string>
    <string name="setting_gps">GPS更新频率:</string>
    <string name="setting_map_level">默认地图等级:</string>
    <string name="setting_submit">确定</string>
    <string name="setting_null">个人设置不能为空.</string>
    <string name="setting_fail">个人设置失败.</string>
    <string name="setting_ok">个人设置成功.</string>
   <string name="spinner_gps_prompt">选择更新频率(秒)</string>
   <string name="spinner_map_prompt">选择地图默认等级</string>
  
      <!--帮助信息界面-->
    <string name="version"><b>版本信息：</b></string> 
    <string name="helps_infos"><b>帮助信息：</b></string> 
    <string name="author"><b>作者信息：</b></string> 
    
    <!-- 地图展示 -->
    <string name="satellite">卫星</string> 
    <string name="traffic">交通</string> 
    <string name="street">街景</string> 
    
   
   
   
    
</resources>
