<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android=
   "http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   >

<view android:id="@+id/mv"
   class="com.google.android.maps.MapView"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:layout_weight="1" 
   android:apiKey="01Yu9W3X3vbr4UFCa_OlwALuXpyD__ocgLaiYNw" 
   />

<LinearLayout xmlns:android=
   "http://schemas.android.com/apk/res/android"
   android:orientation="horizontal"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:background="#550000ff"
   android:padding="1px"
   >
<Button android:id="@+id/sat"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:layout_marginLeft="40px"
   android:text="@string/satellite" />

<Button android:id="@+id/traffic"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/traffic" />
    
<Button android:id="@+id/streetview"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/street" />    
 
<Button android:id="@+id/gps"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="GPS" />
</LinearLayout>

<LinearLayout xmlns:android=
   "http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="wrap_content"
   android:layout_height="fill_parent"
   android:background="#550000ff"
   android:padding="1px"
   >
<Button android:id="@+id/zin"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:layout_marginTop="30px"
   android:text="+" />
<Button android:id="@+id/zout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="-" />
     
<Button android:id="@+id/pann"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="N" />
     
<Button android:id="@+id/pane"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="E" />
     
<Button android:id="@+id/panw"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="W" />

<Button android:id="@+id/pans"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="S" />
    
</LinearLayout>

</FrameLayout>